--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@tensorflow/tfjs-node": "^4.22.0",
     "brain.js": "^1.6.0",
     "canvas": "^2.11.2",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.7",
+    "csv-parse": "^5.6.0",
     "density-clustering": "^1.3.0",
     "express": "^4.21.1",
     "papaparse": "^5.4.1"
